// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordForm should render correctly 1`] = `
<form>
  <Field
    autoComplete="current-password"
    component={[Function]}
    id="currentPassword"
    label="Current Password"
    name="currentPassword"
    type="password"
    validate={[Function]}
  />
  <Field
    autoComplete="new-password"
    component={[Function]}
    id="newPassword"
    label="New Password"
    name="newPassword"
    type="password"
    validate={
      Array [
        [Function],
        [Function],
        [Function],
      ]
    }
  />
  <Button
    disabled={true}
    size="default"
    submit={true}
  >
    Update Password
  </Button>
</form>
`;

exports[`PasswordForm should render correctly when updating 1`] = `
<form>
  <Field
    autoComplete="current-password"
    component={[Function]}
    id="currentPassword"
    label="Current Password"
    name="currentPassword"
    type="password"
    validate={[Function]}
  />
  <Field
    autoComplete="new-password"
    component={[Function]}
    id="newPassword"
    label="New Password"
    name="newPassword"
    type="password"
    validate={
      Array [
        [Function],
        [Function],
        [Function],
      ]
    }
  />
  <Button
    disabled={true}
    size="default"
    submit={true}
  >
    Updating Password
  </Button>
</form>
`;
